--- a/assets/style.css
+++ b/assets/style.css
@@ -138,3 +138,22 @@ a:hover{
 .hamburger-icon span:first-child{
     transform: none;
 }
+
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container{
+    display: flex;
+}
+
+#profile{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
